<resources>
    <string name="app_name">QrVentory</string>
    <string name="title_main">QrVentory - Escanear QR</string>
    <string name="status_hint">Apunta la camara a un codigo QR para ver el inventario.</string>
    <string name="scan_button">Escanear QR</string>
    <string name="clear_button">Limpiar</string>
    <string name="scan_prompt">Escanea un codigo QR de QrVentory</string>
    <string name="scan_cancelled">Escaneo cancelado</string>
    <string name="history_cleared">Historial limpio. Listo para escanear.</string>
    <string name="status_last">Ultimo: %1$s</string>
    <string name="item_fallback">Item</string>
    <string name="show_details_button">Ver detalles</string>
    <string name="item_name_placeholder">Sin nombre</string>
    <string name="item_serial_placeholder">Sin serie</string>
    <string name="item_category_placeholder">Sin categoria</string>
    <string name="item_location_placeholder">Sin ubicacion</string>
    <string name="item_meta_placeholder">Categoria: Sin categoria - Ubicacion: Sin ubicacion</string>
    <string name="item_meta_format">Categoria: %1$s - Ubicacion: %2$s</string>
    <string name="scan_info_waiting">Buscando codigo...</string>
    <string name="scan_info_serial_placeholder">Serie: Sin serie</string>
    <string name="scan_info_meta_placeholder">Categoria: Sin categoria - Ubicacion: Sin ubicacion</string>
    <string name="scan_info_serial_label">Serie: %1$s</string>
    <string name="label_serial">Serie</string>
    <string name="label_category">Categoria</string>
    <string name="label_location">Ubicacion</string>
    <string name="label_provider">Proveedor</string>
    <string name="label_date_added">Fecha agregada</string>
    <string name="label_extras">Datos extra</string>
    <string name="label_raw">Contenido completo</string>
    <string name="button_copy">Copiar</string>
    <string name="button_share">Compartir</string>
    <string name="copy_confirm">Copiado</string>
    <string name="share_title">Compartir contenido del QR</string>
    <string name="extra_none_label">Sin datos extra</string>
    <string name="extra_none_value">Solo contiene los campos basicos</string>
    <string name="extra_empty_value">Sin valor</string>
    <string name="show_raw">Mostrar contenido completo</string>
    <string name="hide_raw">Ocultar contenido completo</string>
    <string name="delete_item">Eliminar este registro</string>
    <string name="confirm_scan">Registrar</string>
    <string name="keep_scanning">Seguir escaneando</string>
</resources>
